fix code overflow

--- a/source/css/_partial/article.styl
+++ b/source/css/_partial/article.styl
@@ -121,7 +121,6 @@ article
       padding 0 5px
       margin 0 2px
       font-size 90%
-      white-space pre
       text-shadow 0 1px #fff
     p
       font-size font-size+0
